--- a/app/src/main/res/drawable/alert_password_wallet_background.xml
+++ b/app/src/main/res/drawable/alert_password_wallet_background.xml
@@ -5,6 +5,7 @@
     <solid android:color="@color/background_gainsboro"/>
 
     <stroke
+        android:width="1dp"
         android:color="#000"/>
 
 </shape>
