--- a/app/src/main/res/values-ja/zomstrings.xml
+++ b/app/src/main/res/values-ja/zomstrings.xml
@@ -3,7 +3,6 @@
     <string name="app_name_zom">&appName;</string>
     <string name="create_an_account">登録</string>
     <string name="create_id">&appName; IDを作成</string>
-    <string name="advanced"></string>
     <string name="account_congrats">おめでとう、あなたは&appName;に準備ができています！</string>
     <string name="account_congrats_details">プロフィールページに自分のパスワードとアカウントの詳細を確認することができます。</string>
     <string name="invite_friends">友達に追加する！</string>
@@ -14,13 +13,13 @@
     <string name="add_friends">友人を追加</string>
     <string name="search_by_id">IDで検索</string>
     <string name="invite_accepted">あなたは今&appName;の友達です</string>
-    <string name="choose_friend">友達を選ぶ</string>
-    <string name="send_message">メッセージを送ります</string>
-    <string name="push_to_talk">プッシュトゥートーク</string>
-    <string name="recording_release">録音…送信して送信</string>
-    <string name="recording_delete">録音…削除して削除</string>
+    <string name="choose_friend">友達を選択</string>
+    <string name="send_message">メッセージ入力</string>
+    <string name="push_to_talk">長押しで録音\u2026</string>
+    <string name="recording_release">録音中..離して送る</string>
+    <string name="recording_delete">指を離してキャンセル</string>
     <string name="swipe_up_delete">スワイプして削除する</string>
-    <string name="create_group">グループを作成</string>
+    <string name="create_group">グループ新規作成</string>
     <string name="members">メンバー</string>
     <string name="photo_gallery">写真ストリーム</string>
     <string name="select_avatar">アバターを選択または作成する</string>
