set format for button

--- a/app/src/main/res/layout/activity_input_password_login.xml
+++ b/app/src/main/res/layout/activity_input_password_login.xml
@@ -53,12 +53,12 @@
             android:orientation="vertical"
             android:gravity="bottom">
             <net.wrappy.im.helper.layout.AppButton
+                style="@style/AppButton_OK"
                 android:id="@+id/btnlogin"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|bottom"
                 android:layout_marginTop="25dp"
-                android:background="@drawable/regbtn_states"
                 android:text="@string/btn_next"
                 android:textColor="#fff" />
 
