--- a/app/src/main/res/layout/forget_password_reset_email_fragment.xml
+++ b/app/src/main/res/layout/forget_password_reset_email_fragment.xml
@@ -61,7 +61,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/regbtn_states"
+        style="@style/AppButton_OK"
         android:gravity="center"
         android:text="@string/otr_qa_send"
         android:textColor="@android:color/white"
