set font bold title and ic show/hidden

--- a/app/src/main/res/layout/activity_input_password_register.xml
+++ b/app/src/main/res/layout/activity_input_password_register.xml
@@ -27,6 +27,7 @@
                 android:textSize="17sp" />
 
             <net.wrappy.im.helper.layout.AppTextView
+                style="@style/AppText02"
                 android:id="@+id/title_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -37,15 +38,14 @@
                 android:paddingLeft="16dp"
                 android:text="@string/create_new_password"
                 android:textColor="#232323"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                app:font_type="bold" />
 
             <net.wrappy.im.helper.layout.AppEditTextView
                 android:id="@+id/edtpassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:drawableRight="@drawable/ic_show"
+                android:drawableRight="@drawable/ic_hidden"
                 android:ems="10"
                 android:hint="@string/input_new_password"
                 android:inputType="textPassword"
@@ -57,6 +57,7 @@
                 android:textSize="14sp" />
 
             <net.wrappy.im.helper.layout.AppTextView
+                style="@style/AppText02"
                 android:id="@+id/title_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -67,8 +68,7 @@
                 android:paddingLeft="16dp"
                 android:text="@string/lock_screen_confirm_passphrase"
                 android:textColor="#232323"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                app:font_type="bold" />
 
             <net.wrappy.im.helper.layout.AppEditTextView
                 android:id="@+id/edtconfirmpassword"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
                 android:background="@android:color/transparent"
-                android:drawableRight="@drawable/ic_show"
+                android:drawableRight="@drawable/ic_hidden"
                 android:ems="10"
                 android:hint="@string/input_repeat_password"
                 android:inputType="textPassword"
