--- a/app/src/main/res/layout/activity_input_password_login.xml
+++ b/app/src/main/res/layout/activity_input_password_login.xml
@@ -33,7 +33,7 @@
         android:layout_marginRight="15dp"
         android:layout_gravity="center"
         android:drawableLeft="@drawable/ic_lock_1"
-        android:drawableRight="@drawable/ic_show"
+        android:drawableRight="@drawable/ic_hidden"
         android:padding="5dp"
         android:drawablePadding="5dp"
         android:ems="10"
