--- a/app/src/main/res/layout/activity_input_password_login.xml
+++ b/app/src/main/res/layout/activity_input_password_login.xml
@@ -72,7 +72,7 @@
                 android:gravity="center"
                 android:textColor="#979797"
                 android:textSize="17sp"
-                android:text="@string/forget_password"/>
+                android:text="@string/forget_passcode"/>
 
 
         </LinearLayout>
